environments/dev/configs/istiod/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: internal
      namespace: istio-system
  hostnames:
    - argocd.dev.arceon.run
  rules:
    - backendRefs:
        - name: argo-cd-argocd-server
          port: 80
