environments/dev/configs/istiod/httproute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: lan
      namespace: istio-system
  hostnames:
    - argocd.arceon.run
  rules:
    - backendRefs:
        - name: argo-cd-argocd-server
          port: 80
